--- a/wker/wrangler.jsonc
+++ b/wker/wrangler.jsonc
@@ -20,7 +20,9 @@
 	],
 
 	"vars": {
-		"ADMIN_API_KEY": "dev-key"
+		"ADMIN_API_KEY": "dev-key",
+		"PUBLIC_BASE_URL": "https://go.vicilabs.dev",
+		"ABT": "ABTESTINGKEY1234##"
 	}
 
 	/**
